chore(igxGrid): Removing horizontal scroll sync for group rows so that group rows are always fixed in place. Adding some very basic styling.

--- a/src/core/styles/components/grid/_grid-component.scss
+++ b/src/core/styles/components/grid/_grid-component.scss
@@ -63,6 +63,25 @@
         @extend %grid-row--group !optional;
     }
 
+    @include e(groupLabel) {
+        @extend %grid__groupLabel !optional;
+    }
+
+    @include e(groupCount) {
+        @extend %grid__groupCount !optional;
+    }
+
+    @include e(groupContent) {
+        @extend %grid__groupContent !optional;
+    }
+    @include e(groupContent) {
+        @extend %grid__groupContent !optional;
+    }
+    @include e(groupIndentation) {
+        @extend %grid__groupIndentation !optional;
+    }
+
+
     @include e(th) {
         @extend %grid-cell-display !optional;
         @extend %grid-cell-header !optional;
